changes for swagger config, added some methods for patient, and feew changes to exception